--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@tailwindcss/vite": "^4.1.7",
     "expo": "53.0.9",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
     "react": "19.0.0",
@@ -24,7 +25,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "twrnc": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
